<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <!--area nombre completo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        tools:layout_editor_absoluteY="75dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLabelNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelNombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--area fecha nacimiento-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFechaNacimiento"
            android:text="@string/labelFechaNacimiento"
        />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/txtvFechaNacimiento"
           android:text="Fecha:"
        />
        <!--telefono-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLabelTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelTelefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLabelCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelCorreo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--Descripcion contacto-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLabelDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/labelDescripcionContacto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Boton Siguiente-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/BtnSiguiente"
            android:text="Siguiente">

        </Button>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>